test(integration): complete #71 round-trip suite; close Phase 5
Add lapsedAlertSinkRoundTrip, pdcSnapshotSinkRoundTrip, and
deadLetterSinkRoundTrip to KafkaSourceSinkRoundTripIT, completing all
six Phase 5 round-trips (3 sources, 4 sinks) against a real
Testcontainers Redpanda broker + schema registry.

Update IMPLEMENTATION.md: Phase 5 status -> done, #71 task note with
full round-trip narrative, D28/D29 recording the two real defects this
integration layer caught (Testcontainers/Docker-29 API mismatch;
AvroKeyValueSerializer silently defaulting auto.register.schemas to
false). Closes #71, closes epic #67.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>